--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/icon-app.jpg?">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/index1.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <title>Music</title>
 </head>
 <body>
